versioned_docs/version-1.3.1-beta.1/docs/modules/analyze.md
---
sidebar_position: 9
---

# Analyze command

The `analyze` command is used to analyze a file the output files of JS recon modules to determine if they contain sensitive info or not.

## Usage

```bash
js-recon analyze [options]
```

## Options

| Option                 | Alias | Description                                                                   | Default        | Required |
| ---------------------- | ----- | ----------------------------------------------------------------------------- | -------------- | -------- |
| `--rules <file/dir>`   | `-r`  | Rules file or directory                                                       |                | No       |
| `--mapped-json <file>` | `-m`  | Mapped JSON file                                                              | `mapped.json`  | No       |
| `--tech <tech>`        | `-t`  | Technology used in the JS files (run with -l/--list to see available options) |                | No       |
| `--openapi <file>`     |       | Path to OpenAPI spec file                                                     |                | No       |
| `--list`               | `-l`  | List available technologies                                                   | `false`        | No       |
| `--validate`           |       | Validate the rules                                                            | `false`        | No       |
| `--output <file>`      | `-o`  | Output JSON file name                                                         | `analyze.json` | No       |

## Examples

### Validating custom rules

Though the tool will validate all the templates automatically, you can also validate them manually using the `--validate` option.

Assuming that the rules are stored in the `./rules` directory, you can run the following command to validate them:

```bash
js-recon analyze --validate -r ./rules
```

### Analyzing OpenAPI spec file

To run analysis on an OpenAPI spec file, make sure that you've generated it using the `map` command:

```bash
js-recon map -d output/<domain> -t <tech> --openapi
```

This will give a file called `mapped-openapi.json` in the working directory. To run analysis on this, run the following command:

```bash
js-recon analyze --openapi mapped-openapi.json -t <tech>
```

This will analyze the `mapped-openapi.json` file against the default rules that would be stored in `$HOME/.js-recon/rules`.

## Built-in detection rules

The bundled rules detect both request-level misconfigurations (for example, missing `Authorization` header) and client-side code patterns such as DOM XSS sinks and Client-Side Path Traversal (CSPT). See [Predefined rules](../rules/predefined-rules.md) for the full catalogue and the constraints each rule applies to avoid false positives.
